# Bebop_control

./: Dockerfile  README.md  run.sh
bebop_control/: CMakeLists.txt  package.xml
bebop_control/Bags/: bebop_PID_dia_03_02_2025_hora_21_32_x.csv  bebop_PID_dia_03_02_2025_hora_21_37_x.csv  bebop_PID_dia_03_02_2025_hora_21_39_y.csv  bebop_PID_dia_03_02_2025_hora_22_03_y.csv  bebop_PID_dia_03_02_2025_hora_22_05_y.csv  bebop_PID_dia_03_02_2025_hora_22_06_y.csv  bebop_PID_dia_03_02_2025_hora_23_31_y.csv  bebop_PID_dia_25_11_2024_hora_22_34.csv  bebop_PID_dia_25_11_2024_hora_22_38.csv  bebop_PID_dia_25_11_2024_hora_22_40.csv  bebop_PID_dia_25_11_2024_hora_22_42.csv  bebop_PID_dia_25_11_2024_hora_22_44.csv  bebop_PID_dia_25_11_2024_hora_22_50_ye.csv  bebop_PID_dia_25_11_2024_hora_22_53_y.csv  bebop_PID_dia_25_11_2024_hora_22_56_y.csv  bebop_PID_dia_25_11_2024_hora_22_58_y.csv  bebop_PID_dia_25_11_2024_hora_22_59_y.csv  bebop_PID_dia_25_11_2024_hora_23_00_y.csv  bebop_PID_dia_25_11_2024_hora_23_02_y.csv  bebop_PID_dia_25_11_2024_hora_23_04_x.csv  bebop_PID_dia_25_11_2024_hora_23_06_x.csv  bebop_PID_dia_25_11_2024_hora_23_07_xe.csv  bebop_PID_dia_25_11_2024_hora_23_13_x.csv  dados0_1.txt  dados0_2.txt  dados1_1.txt  dados1_2.txt  dados2_1.txt  dados2_2.txt  dados3_1.txt  dados3_2.txt  dados4_1.txt  dados4_2.txt  dados5_1.txt  dados5_2.txt  dados6_1.txt  dados6_2.txt  dados7_1.txt  dados7_10.txt  dados7_2.txt  (+26 more)
bebop_control/New_Data/: acc_modelo_1.txt  acc_modelo_2.txt  acc_modelo_3.txt  acc_modelo_4.txt  acc_modelo_x_2.txt  acc_modelo_y_2.txt  acc_modelo_yaw_2.txt  acc_modelo_z_2.txt  acc_sim_1.txt  acc_sim_2.txt  acc_sim_3.txt  acc_sim_4.txt  acc_sim_x_2.txt  acc_sim_y_2.txt  acc_sim_yaw_2.txt  acc_sim_z_2.txt  malha_aberta_x_2024-07-23-00-26-38.bag  malha_aberta_x_2024-07-23-01-06-24.bag  malha_aberta_y_2024-07-23-00-32-06.bag  malha_aberta_y_2024-07-23-01-08-54.bag  malha_aberta_yaw_2024-07-23-00-43-55.bag  malha_aberta_yaw_2024-07-23-01-10-44.bag  malha_aberta_z_2024-07-23-00-42-09.bag  malha_aberta_z_2024-07-23-01-09-58.bag  tempo_1.txt  tempo_2.txt  tempo_3.txt  tempo_4.txt  tempo_x_2.txt  tempo_y_2.txt  tempo_yaw_2.txt  tempo_z_2.txt  vel_modelo_1.txt  vel_modelo_2.txt  vel_modelo_3.txt  vel_modelo_4.txt  vel_modelo_x_2.txt  vel_modelo_y_2.txt  vel_modelo_yaw_2.txt  vel_modelo_z_2.txt  (+8 more)
bebop_control/dados_certos/: dados_x_0_2.txt  dados_x_1_2.txt  dados_y_2_1.txt  dados_y_3_1.txt  (+9 more)
(+25 files in other folders)
