<?xml version="1.0"?>
<package format="2">
  <name>bebop_control</name>
  <version>0.0.0</version>
  <description>The bebop_control package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>custom_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>bebop_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>bebop_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
  
</package>